# BaiyuAISpace2

./: .eslintrc.cjs  .gitignore  .npmrc  AGENTS.md  BaiyuAISpace 许可证补充条款.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  TODO.md  index.html  install-deps.ps1  package-lock.json  package.json  pnpm-lock.yaml  readme.md  vite.config.ts
.dbg/: message-disappear.env
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: is-newer-semver.mjs
.github/workflows/: ci.yml  publish-update-manifest.yml  release.yml
docs/: MANUAL_TEST_CHECKLIST.md  README.md  SOFTWARE_TESTING_PLAN.md  development-log.md  mcp-integration-guide.md  mcp-llm-integration.md  pr-review-report.md
docs/AgentTeamMode/: Agent_Team_Mode_Design_Document.docx  Agent_Team_Mode_Design_Document.md
docs/api-manuals/: README.md  aliyun-qwen.md  anthropic.md  azure-openai.md  baidu-qianfan.md  deepseek.md  doubao.md  google-gemini.md  minimax.md  mistral.md  moonshot-kimi.md  openai.md  siliconflow.md  yi.md  zhipu-glm.md
docs/archive/: Claude_Code_超详细全功能使用说明书.md  debug-message-disappear.md  development-log.md  mcp-integration-guide.md  mcp-llm-integration.md  pr-review-report.md
docs/codebase-map/: 01-架构地图.md  02-关键数据流.md  03-决策记录.md
docs/wiki/: Agent-Team协作团队.md  Home.md  MCP工具.md  Skill技能.md  _Footer.md  _Sidebar.md  安装指南.md  定时任务.md  对话与模型接入.md  常见问题FAQ.md  开发者指南.md  快速上手.md  支持的LLM提供商.md  本地部署.md  知识库RAG.md  许可证说明.md
public/: html-preview-reporter.js
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  main.rs  secure_storage.rs  types.rs  workspace_smoke_test.rs
src-tauri/src/commands/: app_update.rs  auth.rs  constants.rs  docker.rs  embedding.rs  llm.rs  lmstudio.rs  local_model.rs  mcp.rs  mod.rs  skills.rs
src-tauri/src/knowledge_base/: commands.rs  db.rs  document.rs  embedding.rs  mod.rs  reranker.rs  retrieval.rs  types.rs
src-tauri/src/scheduler/: commands.rs  db.rs  mod.rs  types.rs
src-tauri/src/workspace/: commands.rs  db.rs  meeting.rs  mod.rs  types.rs
src/components/: ChatInput.vue  ChatMessage.vue  Layout.vue  TokenCount.vue
src/composables/: useNotify.ts
src/router/: index.ts
src/stores/: chat.ts  docker.ts  knowledgeBase.ts  lmStudio.ts  localModel.ts  mcp.ts  scheduler.ts  settings.ts  skills.ts  workspace.ts
src/styles/: global.scss  variables.scss
src/utils/: errorMessage.ts  exportConversation.ts  hotkey.ts  markdown.ts  sound.ts  (+2 more)
tools/: test_stream_message.js
(+17 files in other folders)
