[package]
name = "baiyu-aispace"
version = "0.1.0"
description = "轻量级跨平台 AI Agent 开发环境"
authors = ["Baiyu"]
license = "MPL-2.0"
repository = "https://github.com/baiyuheniao/BaiyuAISpace"
edition = "2021"
rust-version = "1.75"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
tauri-winres = "0.3"

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
rusqlite = { version = "0.30", features = ["bundled"] }
keyring = { version = "3.6", features = ["windows-native", "apple-native", "linux-native"] }
tauri-plugin-stronghold = "2.0.0"
keyring = "3.6.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
