[package]
name = "BaiyuAISpace2"
version = "0.1.0"
description = "轻量级跨平台 AI Agent 开发环境"
authors = ["Baiyu"]
license = "MPL-2.0"
repository = "https://github.com/baiyuheniao/BaiyuAISpace"
edition = "2021"
rust-version = "1.75"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.11", features = [] }
tauri-winres = "0.3"

[dependencies]
tauri = { version = "2.11", features = [] }
tauri-plugin-shell = "2.2"
tauri-plugin-dialog = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
fern = { version = "0.6", features = ["colored"] }
rusqlite = { version = "0.30", features = ["bundled"] }
keyring = { version = "3.6", features = ["windows-native", "apple-native", "linux-native"] }
sha2 = "0.10"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
tokio-util = "0.7"
once_cell = "1.19"
scopeguard = "1.2"
urlencoding = "2.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
